Various init/service related changes
- Configure with --with-piddir=/run/shairport-sync so that shairport can
  write to its PID directory even when started as the unprivileged
  shairport-sync user.
- Change the systemd service to use Type=forking. This is needed in
  order that shairport-sync can signal itself (e.g. using
  --disconnectFromOutput).
- Create /run/shairport-sync in the init script if it doesn't exist.
- Add --daemon to the DAEMON_ARGS in the init script so that it
  backgrounds itself and writes the PID file.
- Add debian/shairport-sync.tmpfile to create /run/shairport-sync when
  using systemd.
- Update comment in debian/shairport-sync.default, and point to
  /etc/shairport-sync.conf.

The init script has now been fully tested along with the systemd unit.

--- a/debian/rules
+++ b/debian/rules
@@ -29,6 +29,7 @@ override_dh_auto_configure:
 		--with-avahi \
 		--with-alsa \
 		--with-pulseaudio \
+		--with-piddir=/run/shairport-sync \
 		--without-configfiles
 
 override_dh_installchangelogs:
