--- a/debian/shairport-sync.service
+++ b/debian/shairport-sync.service
@@ -5,12 +5,13 @@ Requires=avahi-daemon.service
 After=avahi-daemon.service
 
 [Service]
-Type=simple
+Type=forking
 Restart=on-failure
 EnvironmentFile=-/etc/default/shairport-sync
-ExecStart=/usr/bin/shairport-sync $DAEMON_ARGS
+ExecStart=/usr/bin/shairport-sync --daemon $DAEMON_ARGS
 User=shairport-sync
 Group=shairport-sync
+PIDFile=/run/shairport-sync/shairport-sync.pid
 
 [Install]
 WantedBy=multi-user.target
